@@ -23,7 +23,7 @@ author = "S1amson"
 # maintaining this theme incase it's not working right
 # please include an e-mail address so you can be contacted
 # DEFAULT: N/A
-maintainer = "Karl Vollmer"
+maintainer = "Spocky"
 
 # Version
 # This is the version of the Theme (usefull if you've updated it)
@@ -40,45 +40,3 @@ orientation = "horizontal"
 # respective pages. If you want to make the menu's something like the classic theme
 # comment this out
 # submenu = "simple"
-
-# Theme Colors
-###################
-[color]
-###################
-# Below is a list of the default colors for this theme, upon
-# applying this theme the users color preferences will be reset
-# to what is listed below... 
-
-# Background Color 1
-bg_color1 = "#320000"
-
-# Background Color 2
-bg_color2 = "#7A0000"
-
-# Base Color 1 
-base_color1 = "#320000"
-
-# Base Color 2 
-base_color2 = "#9F0000"
-
-# Font Color 1 
-font_color1 = "#222222"
-
-# Font Color 2
-font_color2 = "#ffffcc"
-
-# Font Color 3
-font_color3 = "#ffffff"
-
-# Row Color 1 
-row_color1 = "#ffffcc"
-
-# Row Color 2
-row_color2 = "#9F0000"
-
-# Row Color 3
-row_color3 = "#7A0000"
-
-# Error Color
-error_color = "#ffffcc"
-
