@@ -16,14 +16,14 @@ name = "Classic Ampache"
 # This is just a way of giving credit to the 
 # person who actually created this theme
 # DEFAULT: N/A
-#author = "Ben Shields"
+author = "Ros"
 
 # Theme Maintainer
 # This is just a way of listing who is responsible for
 # maintaining this theme incase it's not working right
 # please include an e-mail address so you can be contacted
 # DEFAULT: N/A
-#maintainer = "Ben Shields <foo@ampache.org>"
+maintainer = "Spocky"
 
 # Orientation
 # This was added as of 3.3.2-Alpha4, this tells Ampache if this theme
@@ -36,45 +36,3 @@ orientation = "vertical"
 # respective pages. If you want to make the menu's something like the classic theme
 # comment this out
 #submenu = "simple"
-
-# Theme Colors
-###################
-[color]
-###################
-# Below is a list of the default colors for this theme, upon
-# applying this theme the users color preferences will be reset
-# to what is listed below... 
-
-# Background Color 1
-bg_color1 = "#ffffff"
-
-# Background Color 2
-bg_color2 = "#000000"
-
-# Base Color 1 
-base_color1 = "#bbbbbb"
-
-# Base Color 2 
-base_color2 = "#dddddd"
-
-# Font Color 1 
-font_color1 = "#222222"
-
-# Font Color 2
-font_color2 = "#000000"
-
-# Font Color 3
-font_color3 = "#ffffff"
-
-# Row Color 1 
-row_color1 = "#cccccc"
-
-# Row Color 2
-row_color2 = "#bbbbbb"
-
-# Row Color 3
-row_color3 = "#dddddd"
-
-# Error Color
-error_color = "#990033"
-
