@@ -16,14 +16,14 @@ name = "Greyblock"
 # This is just a way of giving credit to the 
 # person who actually created this theme
 # DEFAULT: N/A
-#author = "Ben Shields"
+author = "Ben Shields"
 
 # Theme Maintainer
 # This is just a way of listing who is responsible for
 # maintaining this theme incase it's not working right
 # please include an e-mail address so you can be contacted
 # DEFAULT: N/A
-#maintainer = "Ben Shields <shieldb@ampache.org>"
+maintainer = "Spocky"
 
 # Simple Menus
 submenu = "full"
